--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
     "test:e2e": "jest --detectOpenHandles --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@eropple/nestjs-auth": "^0.3.0",
+    "@eropple/nestjs-auth": "^0.6.0",
     "@eropple/nestjs-bunyan-logger": "0.1.1",
-    "@nestjs/cli": "^6.5.0",
-    "@nestjs/common": "^6.5.2",
-    "@nestjs/core": "6.0.0",
-    "@nestjs/platform-express": "^6.5.2",
+    "@nestjs/cli": "7",
+    "@nestjs/common": "7",
+    "@nestjs/core": "7",
+    "@nestjs/platform-express": "7",
     "bunyan": "1.8.12",
     "lodash": "4.17.11",
     "reflect-metadata": "0.1.12",
     "rimraf": "2.6.2",
-    "rxjs": "6.3.3",
+    "rxjs": "^6.5.5",
     "utility-types": "3.7.0"
   },
   "devDependencies": {
-    "@nestjs/testing": "6.0.0",
+    "@nestjs/testing": "7",
     "@types/bunyan": "1.8.6",
     "@types/express": "4.16.0",
     "@types/jest": "23.3.13",
